--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="./style.css">
-    <title>5 Day Weather Dashboard</title>
+    <title>Chris' 5 Day Weather Dashboard</title>
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-brand mb-0 h1 w-100 text-center">5 Day Weather Dashboard</span>
+        <span class="navbar-brand mb-0 h1 w-100 text-center">Chris' 5 Day Weather Dashboard</span>
     </nav>
     <div class="container">
         <div class="row">
